# Space_Rover

./: CMakeLists.txt
data/: Rover_Motor_ID.m  Rover_data_code.m  data_FL.csv  mu_lambda.m
data/241113/: steer_joint.fig
data/ID_torque_input/: input33_colvec.txt  torque_input.txt  torque_input2.txt
include/controller/: MotorController.hpp  TrackingController.hpp  estimate.hpp
include/math/: Useful.hpp  VelocityController.hpp
include/robot/: Mclquad.hpp  RobotLeg.hpp
include/trajectory/: MotionTrajectory.hpp
include/utilities/: data_logging.hpp
model/mcl_quad/: quadrupedMCL.xml
model/mcl_rover/: scene.xml  scene_terrain.xml  spaceroverMCL.xml  terrain_generator_1.py
model/mcl_rover/assets/meshes/: FL_bot_sus_bar.STL  FL_steer_link.STL  FL_sus_cover.STL  FL_wheel.STL  FR_bot_sus_bar.STL  FR_steer_link.STL  FR_sus_cover.STL  FR_wheel.STL  RL_bot_sus_bar.STL  RL_steer_link.STL  RL_sus_cover.STL  RL_wheel.STL  RR_bot_sus_bar.STL  RR_steer_link.STL  RR_sus_cover.STL  RR_wheel.STL  base_link.STL
model/mcl_rover/assets/urdf/: Rover_3D_YCM.csv  Rover_3D_YCM.urdf
src/: main.cc  simulate.cc
src/controller/: MotorController.cpp  TrackingController.cpp  estimate.cpp
src/math/: Useful.cpp
src/robot/: RobotLeg.cpp
src/trajectory/: MotionTrajectory.cpp
src/utilities/: data_logging.cpp
